engine-net-2/examples/Errors/MatchRuleUnknown.grs
new graph "Rules.grg"

exec (n:N)=init ;> { m:match<tt>=[?t][0]; v:int = m.b } 

quit
